tests/success/function_simple/main.adept3

pragma => adept("3.0")

#[foreign]
func printf(format ptr<char>, ...) int

func main {
    greet()
}

func greet() {
    printf(c"Welcome, World!")
}

